# llmpeg

./: .gitignore  Dockerfile  Makefile  README  README.md  __main__.py  cloud_run.sh  index.html  install.sh  me  prompt.txt  pyproject.toml  requirements.txt  ruff.toml  run.sh
ci/: llmpeg.Dockerfile
llmpeg/: __init__.py  __main__.py  agent.py  config.py  lol.py  types.py  utils.py
llmpeg/actions/: __init__.py  actions.py  hear.py  speech.py  vision.py
llmpeg/actions/brain/: __init__.py  prompt.txt  rational.py  trigger.py  trigger_list.py  triggerlist.py
llmpeg/actions/reactions/: __init__.py  conversation.py  stt.py  tts.py  vision.py
llmpeg/actions/triggers/: __init__.py  triggerlist.py  triggers.py
llmpeg/capabilities/: __init__.py
llmpeg/capabilities/audio/: __init__.py  audio.py  audio_input.py  audio_output.py
llmpeg/capabilities/clipboard/: __init__.py  clipboard.py
llmpeg/capabilities/filesystem/: __init__.py  filesystem.py
llmpeg/capabilities/network/: network.py
llmpeg/capabilities/network/browser/: browser.py
llmpeg/capabilities/networking/: networking.py
llmpeg/capabilities/networking/browser/: browser.py
llmpeg/capabilities/screen/: __init__.py  screen.py
llmpeg/logger/: __init__.py  logger.py  logger_factory.py  logger_to_logfile.py  logger_to_stdout.py
llmpeg/models/: __init__.py  llm.py  nlp.py  segm.py  stt.py  tts.py  vlm.py
llmpeg/patterns/: triggers.py
llmpeg/senses/: conversation.py  nlp.py  tts.py  vision.py
sakass/: __init__.py  agent.py  config.py  utils.py
sakass/capabilities/: __init__.py  audio_input.py  audio_output.py  listen.py  speak.py
sakass/capabilities/audio/: __init__.py  audio.py  audio_input.py  audio_output.py
sakass/capabilities/interface/: web_interface.py
sakass/capabilities/interface/templates/: index.html
sakass/capabilities/networking/: __init__.py  networking.py
sakass/capabilities/webdriver/: default_chrome_driver.py  driver.py
sakass/logger/: __init__.py  logger.py  logger_factory.py  logger_to_logfile.py  logger_to_stdout.py
sakass/modules/: __init__.py  browser.py  conversation.py  nlp.py  stt.py  tts.py  vision.py
sakass/modules/patterns/: __init__.py  prompts.py  triggers.py
sakass/modules/prompts/: prompts.py
sakass/senses/: __init__.py  conversation.py  nlp.py  tts.py  vision.py
scripts/: add.sh  clear.sh  cloud_run.sh  docker_build.sh  docker_run.sh  install.sh  python39.Dockerfile  remove.sh  replace_me.py  ruff.sh  run.sh  update.sh
tests/: agent_tests.py
(+9 files in other folders)
