[tool.poetry]
name = "llmpeg"
version = "0.1.0"
description = ""
authors = ["rodfer0x80 <admin@rodfer.online>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0, <3.12" 
tts = "^0.22.0"
selenium = "^4.21.0"
jsonargparse = "^4.28.0"
ollama = "^0.2.0"
openai-whisper = "^20231117"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
numpy = "^1.26.4"
python-vlc = "^3.0.20123"
beautifulsoup4 = "^4.12.3"
yt-dlp = "^2024.4.9"
easyocr = "^1.7.1"
loguru = "^0.7.2"
pytest = "^8.2.1"
pypeline = {git = "https://github.com/rodfer0x80/pypeline"}
pylogger = {git = "https://github.com/rodfer0x80/pylogger"}

pyaudio = "^0.2.14"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "bin.__main__:main"
