[tool.poetry]
name = "llmpeg"
version = "0.1.0"
description = ""
authors = ["rodfer0x80 <admin@rodfer.online>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <4.0" 


pillow = "^10.3.0"
torch = "^2.3.1"
transformers = "^4.41.2"
sounddevice = "^0.4.7"
accelerate = "^0.31.0"
numpy = "^1.26.4"
selenium = "^4.21.0"
pylogger = {git = "https://github.com/rodfer0x80/pylogger.git"}
pypeline = {git = "https://github.com/rodfer0x80/pypeline"}
yt-dlp = "^2024.5.27"
beautifulsoup4 = "^4.12.3"
huggingface-hub = "^0.23.4"
nltk = "^3.8.1"
setuptools = "^70.0.0"
wheel = "^0.43.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "bin.__main__:main"
